style.css
html{
	margin: 0;
	padding: 0
	height: 95%;
	padding-bottom: 500px;
}

body{
  background-color: #7dd0b6;
}

.navBar{
	background-color: black;
	font-family: Garamond;
	text-decoration-color: white;
	list-style: none;
	text-align: right;
	padding: 15px 0 15px 0;
	margin: 0px;
}

.navBar > li {
	display: inline-block;
	padding: 0 25px 0 25px;
}

.navBar > li > a {
	text-decoration: none;
	color: white;
}

h1 {
	position: absolute;
  	bottom: 0px;
  	left: 0px;
  	background: rgba(0, 0, 0, 0.75);
  	padding: 4px 8px;
  	color: white;
  	margin: 0;
  	font: 14px Sans-Serif;
}

.opp h1 {
  background: rgba(255, 255, 255, 0.75);
  color: black;
}


.rounded{
	border-radius: 12px;
}


.container {
    position: relative;
    text-align: center;
    color: white;
}

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.qHeader {
    position: absolute;
    top: 200px;
    left: 16px;
}

.bottomRight {
	position: absolute;
    bottom: 8px;
    right: 16px;
}

.homepage {
  width: 450px;
  height: 300px;
  padding-left: 95px;
  padding-right: 95px;
}


.sidepic-1 {
	width: 550px;
	height: 300px;
	padding-left: 150px;
	padding-right: 95px;
}

.exp-1{
  padding-right: 150px;
  padding-bottom: 275px;
}

.sidepic-2 {
  width: 550px;
  height: 300px;
  padding-left: 95px;
  padding-right: 150px;
}

.exp-2{
  padding-left: 150px;
  padding-right: 650px;
  padding-bottom: 225px;
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 100%;
}

.bcenter{
	display: block;
    margin-left: auto;
    margin-right: auto;
}

.experience-align{
  text-align: center;
  padding-left: 50px;
}

.aboutme{
  padding-right: 50px;
  padding-bottom: 75px;
}

